import { Settings } from '../settings/Settings'

export function SettingsPage() {
  return <Settings />
}
